# TaskTracker

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 325606da5fc7_initial.py
src/: config.py  database.py  main.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: employee.py  task.py
src/crud/: base.py  crud_employee.py  crud_task.py
src/employee/: crud.py  models.py  router.py  schemas.py
src/models/: __init__.py  employee.py  task.py
src/schemas/: __init__.py  employee.py  task.py
src/services/: __init__.py  employee.py  tasks.py
src/tasks/: crud.py  models.py  router.py  schemas.py
tests/: conftest.py
tests/test_api/: test_employee.py
